Fix clipping of sub-page title image.

--- a/web-app/css/new/subpage.css
+++ b/web-app/css/new/subpage.css
@@ -18,6 +18,7 @@ p {
 	text-align:left;
 	padding-top:30px;
 	padding-left:70px;
+	min-width: 12em;
 }
 #contentCenter {
 	width:1008px;
